[workspace]
resolver = "2"
members = [
    "register",
    "register_macro",
    "register_field",
    "register_field_derive",
]

[workspace.dependencies]
proc-macro2 = { version = "^1.0.86", default-features = false }
quote = { version = "^1.0.36", default-features = false }
syn = { version = "^2.0.67", default-features = false } 
